# tkom

./: README.md  SConstruct  dokumentacja_wstepna.md  lexer.cpp  main.cpp  scanner.cpp  scanner.h
Lexer/: CMakeLists.txt
Lexer/src/: CMakeLists.txt  main.cpp
Lexer/src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
Lexer/src/token/: CMakeLists.txt  token.cpp  token.h
Lexer/tests/: CMakeLists.txt  lexer_test.cpp
